--- a/assets/style/scss/global-style.scss
+++ b/assets/style/scss/global-style.scss
@@ -10,6 +10,13 @@ $screen-md: 720px;
 $screen-lg: 960px;
 $screen-xl: 1140px;
 
-// IMPORTS
+// COMPONENTS
 @import "container.scss";
 @import "loading.scss";
+@import "menu.scss";
+@import "animation.scss";
+@import "banner.scss";
+
+// FONTS
+@import "fonts/poppins.scss";
+@import "fonts/thenautigal.scss";
