--- a/assets/style/scss/global-style.scss
+++ b/assets/style/scss/global-style.scss
@@ -61,6 +61,10 @@ p {
   }
 }
 
+/* COLORS */
+$white: #FFFFFF;
+
+
 .section-gallery {
 
   &::before {
@@ -68,7 +72,7 @@ p {
     position: absolute;
     height: 100%;
     width: 100%;
-    background-color: rgba($color: $background, $alpha: 0.5);
+    background-color: rgba($color: $white, $alpha: 0.5);
     top: 0;
     z-index: 0;
   }
