fix: fixing imports[2]

--- a/assets/style/scss/fonts/thenautigal.scss
+++ b/assets/style/scss/fonts/thenautigal.scss
@@ -2,12 +2,12 @@
   font-family: 'TheNautigal';
   font-style: normal;
   font-weight: 400;
-  src: url('/assets/fonts/TheNautigal/TheNautigal-Regular.ttf');
+  src: url('../../fonts/TheNautigal/TheNautigal-Regular.ttf');
 }
 
 @font-face {
   font-family: 'TheNautigal';
   font-style: bold;
   font-weight: 700;
-  src: url('/assets/fonts/TheNautigal/TheNautigal-Bold.ttf');
+  src: url('../../fonts/TheNautigal/TheNautigal-Bold.ttf');
 }
