--- a/assets/style/scss/global-style.scss
+++ b/assets/style/scss/global-style.scss
@@ -10,32 +10,34 @@ $screen-md: 720px;
 $screen-lg: 960px;
 $screen-xl: 1140px;
 
+// FONTS
+@import '../scss/fonts/poppins.scss';
+@import '../scss/fonts/thenautigal.scss';
+
 // COMPONENTS
 @import 'container.scss';
 @import 'loading.scss';
 @import 'menu.scss';
 @import 'banner.scss';
 
-// FONTS
-@import 'fonts/poppins.scss';
-@import 'fonts/thenautigal.scss';
-
 html {
-  scroll-behavior: smooth;
+  scroll-behavior: smooth;  
 }
 
+body {
+  font-family: 'Poppins', sans-serif;
+}
+
+
+
 body::-webkit-scrollbar {
-  width: 0;
+  width: 0;  
 }
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-
-p {
-  font-family: 'Poppins', sans-serif;
 }
 
 .section {
