--- a/assets/style/scss/fonts/poppins.scss
+++ b/assets/style/scss/fonts/poppins.scss
@@ -2,47 +2,40 @@
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 200;
-  src: url('/assets/fonts/Poppins/Poppins-ExtraLight.ttf');
+  src: url('../../fonts/Poppins/Poppins-ExtraLight.ttf');
 }
 
 @font-face {
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 300;
-  src: url('/assets/fonts/Poppins/Poppins-Light.ttf');
+  src: url('../../fonts/Poppins/Poppins-Light.ttf');
 }
 
 @font-face {
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 400;
-  src: url('/assets/fonts/Poppins/Poppins-Regular.ttf');
+  src: url('../../fonts/Poppins/Poppins-Regular.ttf');
 }
 
 @font-face {
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 500;
-  src: url('/assets/fonts/Poppins/Poppins-Medium.ttf');
+  src: url('../../fonts/Poppins/Poppins-Medium.ttf');
 }
 
 @font-face {
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 600;
-  src: url('/assets/fonts/Poppins/Poppins-SemiBold.ttf');
+  src: url('../../fonts/Poppins/Poppins-SemiBold.ttf');
 }
 
 @font-face {
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 700;
-  src: url('/assets/fonts/Poppins/Poppins-Bold.ttf');
-}
-
-@font-face {
-  font-family: 'Poppins';
-  font-style: normal;
-  font-weight: 100;
-  src: url('/assets/fonts/Poppins/');
+  src: url('../../fonts/Poppins/Poppins-Bold.ttf');
 }
