--- a/assets/style/scss/loading.scss
+++ b/assets/style/scss/loading.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Oxygen:700&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@700&display=swap');
 
 body {
   margin: 0;
